# checkmint

./: .gitignore  CMakeLists.txt  LICENSE  README.md  checkmint.hpp
examples/: OrderedPair.hpp  OrderedTuple.cpp  concepts.hpp
